force-app/main/default/objects/blng__AccountBalanceSnapshot__c/blng__AccountBalanceSnapshot__c.object-meta.xml
<CustomObject>
    <label>Account Balance Snapshot</label>
    <nameField>
        <label>Account Balance Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Balance Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>