force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__Account__c.field-meta.xml
<CustomField>
    <fullName>blng__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Balance Snapshots</relationshipLabel>
    <relationshipName>AccountBalanceSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>