force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__AccountBalance__c.field-meta.xml
<CustomField>
    <fullName>blng__AccountBalance__c</fullName>
    <formula>blng__TotalInvoiceAmount__c - blng__UnappliedPaymentAmount__c - blng__UnappliedCreditNoteAmount__c + blng__UnappliedDebitNoteAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>