force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__BalanceSnapshotRunCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>blng__BalanceSnapshotRunCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Balance Snapshot Run (Created By)</label>
    <referenceTo>blng__BalanceSnapShotRun__c</referenceTo>
    <relationshipLabel>Account Balance Snapshot</relationshipLabel>
    <relationshipName>BalanceSnapshotRunInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>