force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__InvoiceAgingBucket10__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceAgingBucket10__c</fullName>
    <label>Invoice Aging Bucket 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>