force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__Invoices__c.field-meta.xml
<CustomField>
    <fullName>blng__Invoices__c</fullName>
    <label>Invoices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>