force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__SnapshotDate__c.field-meta.xml
<CustomField>
    <fullName>blng__SnapshotDate__c</fullName>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>