force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__TotalInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalInvoiceAmount__c</fullName>
    <formula>blng__InvoiceAgingBucket1__c + blng__InvoiceAgingBucket10__c + blng__InvoiceAgingBucket2__c + blng__InvoiceAgingBucket3__c + blng__InvoiceAgingBucket4__c + blng__InvoiceAgingBucket5__c + blng__InvoiceAgingBucket6__c + blng__InvoiceAgingBucket7__c + blng__InvoiceAgingBucket8__c + blng__InvoiceAgingBucket9__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>