force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__UnappliedCreditNoteAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__UnappliedCreditNoteAmount__c</fullName>
    <label>Unapplied Credit Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>