force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__UnappliedCreditNotes__c.field-meta.xml
<CustomField>
    <fullName>blng__UnappliedCreditNotes__c</fullName>
    <label>Unapplied Credit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>