force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__UnappliedDebitNoteAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__UnappliedDebitNoteAmount__c</fullName>
    <label>Unapplied DebitNote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>