force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__UnappliedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__UnappliedPaymentAmount__c</fullName>
    <label>Unapplied Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>