force-app/main/default/objects/blng__AccountBalanceSnapshot__c/fields/blng__UnappliedPayments__c.field-meta.xml
<CustomField>
    <fullName>blng__UnappliedPayments__c</fullName>
    <label>Unapplied Payments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>